fixed align-center css, it was effects other page

--- a/css/withdraw.css
+++ b/css/withdraw.css
@@ -36,7 +36,7 @@
     color: #00aef9;
 }
 
-.modal-body{
+.align-center{
     text-align: center;
 }
 
